fix shift

--- a/waypoint_app/static/css/style.css
+++ b/waypoint_app/static/css/style.css
@@ -1,5 +1,9 @@
-html {
-    overflow-y: scroll;
+.modal {
+    overflow-y: auto;
+}
+
+.modal-open {
+    overflow: auto;
 }
 
 body {
